@@ -23,6 +23,9 @@ Changes in version 1.6-7
   * pdata.frame: fixed bug so that pdata.frames with only one column can be 
     created if drop.index = TRUE is set.
   * pvar: added method for pseries.
+  * pmodel.response, fitted.plm, residuals.plm: for "between" and "fd" models, 
+    a pure numeric is returned, not an 'illegal' pseries anymore (these models 
+    compress data where having an index/pseries is useless and misleading).
 
 
 Changes in version 1.6-6
